--- a/RenatSochnev320_PetsPhoto/MyPages/AuthorizationPage.xaml
+++ b/RenatSochnev320_PetsPhoto/MyPages/AuthorizationPage.xaml
@@ -6,13 +6,11 @@
       xmlns:local="clr-namespace:RenatSochnev320_PetsPhoto.MyPages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="AuthorizationPage">
+      Title="AuthorizationPage" Background="Beige"
+      FontSize="24">
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
             <ColumnDefinition/>
             <ColumnDefinition/>
             <ColumnDefinition/>
@@ -24,6 +22,45 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
+
+        <TextBlock Text="Авторизация"
+                   Grid.Column="1"
+                   Grid.Row="1"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center"/>
+
+        <TextBlock Text="Логин"
+                   Grid.Column="1"
+                   Grid.Row="2"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Bottom"/>
+        <TextBox x:Name="LoginTb"
+                 Grid.Column="1"
+                 Grid.Row="3"
+                 Height="45"
+                 VerticalAlignment="Top"/>
+
+        <TextBlock Text="Пароль"
+           Grid.Column="1"
+           Grid.Row="4"
+           HorizontalAlignment="Center"
+           VerticalAlignment="Bottom"/>
+        <PasswordBox x:Name="PasswordPb"
+         Grid.Column="1"
+         Grid.Row="5"
+         Height="45"
+         VerticalAlignment="Top"/>
+
+        <Button x:Name="LoginBtn"
+                Content="Войти"
+                Background="Azure"
+                Grid.Column="1"
+                Grid.Row="6"
+                Height="45"
+                VerticalAlignment="Bottom"/>
+
     </Grid>
 </Page>
