Создал страницу вывода информации о питомцах и окно добавления

--- a/RenatSochnev320_PetsPhoto/MyPages/AuthorizationPage.xaml
+++ b/RenatSochnev320_PetsPhoto/MyPages/AuthorizationPage.xaml
@@ -60,7 +60,8 @@
                 Grid.Column="1"
                 Grid.Row="6"
                 Height="45"
-                VerticalAlignment="Bottom"/>
+                VerticalAlignment="Bottom" 
+                Click="LoginBtn_Click"/>
 
     </Grid>
 </Page>
